force-app/main/default/objects/Lead/fields/b2c_Buyer_Need__c.field-meta.xml
<CustomField>
    <fullName>b2c_Buyer_Need__c</fullName>
    <description>Needs of the student that have prompted the parent to reach out</description>
    <label>Buyer Need</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anxiety or mental wellbeing</fullName>
            </value>
            <value>
                <fullName>Lack of motivation</fullName>
            </value>
            <value>
                <fullName>My child is doing well but I’d like to see them do even better</fullName>
            </value>
            <value>
                <fullName>No concerns</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Poor marks or exam performance</fullName>
            </value>
            <value>
                <fullName>Poor organisation and time management</fullName>
            </value>
            <value>
                <fullName>Studying with ADHD</fullName>
            </value>
            <value>
                <fullName>Studying with ASD or other learning conditions</fullName>
            </value>
            <value>
                <fullName>They don’t know how to study effectively</fullName>
            </value>
            <value>
                <fullName>ADHD</fullName>
                <isActive>false</isActive>
                <label>ADHD</label>
            </value>
            <value>
                <fullName>Anxiety</fullName>
                <isActive>false</isActive>
                <label>Anxiety</label>
            </value>
            <value>
                <fullName>Aspirational Need</fullName>
                <isActive>false</isActive>
                <label>Aspirational Need</label>
            </value>
            <value>
                <fullName>Disorganised</fullName>
                <isActive>false</isActive>
                <label>Disorganised</label>
            </value>
            <value>
                <fullName>Doesn&apos;t know how to study</fullName>
                <isActive>false</isActive>
                <label>Doesn&apos;t know how to study</label>
            </value>
            <value>
                <fullName>Exam Preparation</fullName>
                <isActive>false</isActive>
                <label>Exam Preparation</label>
            </value>
            <value>
                <fullName>Focus</fullName>
                <isActive>false</isActive>
                <label>Focus</label>
            </value>
            <value>
                <fullName>Learning Disorder</fullName>
                <isActive>false</isActive>
                <label>Learning Disorder</label>
            </value>
            <value>
                <fullName>Motivation</fullName>
                <isActive>false</isActive>
                <label>Motivation</label>
            </value>
            <value>
                <fullName>Poor Marks</fullName>
                <isActive>false</isActive>
                <label>Poor Marks</label>
            </value>
            <value>
                <fullName>Student Wellbeing</fullName>
                <isActive>false</isActive>
                <label>Student Wellbeing</label>
            </value>
            <value>
                <fullName>Time Management</fullName>
                <isActive>false</isActive>
                <label>Time Management</label>
            </value>
            <value>
                <fullName>Writing</fullName>
                <isActive>false</isActive>
                <label>Writing</label>
            </value>
            <value>
                <fullName>Year 12 Proximity</fullName>
                <isActive>false</isActive>
                <label>Year 12 Proximity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>