force-app/main/default/objects/Lead/fields/cura_trial_start_date__c.field-meta.xml
<CustomField>
    <fullName>cura_trial_start_date__c</fullName>
    <label>Trial Start Date</label>
    <type>Date</type>
</CustomField>