force-app/main/default/objects/Lead/fields/Email_Bounced_External__c.field-meta.xml
<CustomField>
    <fullName>Email_Bounced_External__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the Contact&apos;s email has bounced when sending from another system such as Mailchimp, Outlook</description>
    <inlineHelpText>Email has bounced when sending from another system such as Mailchimp, Outlook</inlineHelpText>
    <label>Email Bounced External</label>
    <type>Checkbox</type>
</CustomField>