force-app/main/default/objects/Lead/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Name Passed On</fullName>
            </value>
            <value>
                <fullName>Price Query</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Request for More Information</fullName>
            </value>
            <value>
                <fullName>Meeting Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>