force-app/main/default/objects/Lead/fields/Method_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Contact__c</fullName>
    <label>Method of Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coaching Website</fullName>
            </value>
            <value>
                <fullName>Seminars Website</fullName>
            </value>
            <value>
                <fullName>Parents Seminar</fullName>
            </value>
            <value>
                <fullName>Webinar form</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Office Call</fullName>
            </value>
            <value>
                <fullName>MidFunnel</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>