force-app/main/default/objects/Lead/fields/Parent_School__c.field-meta.xml
<CustomField>
    <fullName>Parent_School__c</fullName>
    <description>This field was created to capture &apos;Parent School&apos; information from a Pardot prospect.</description>
    <inlineHelpText>&apos;Parent School&apos; information from Pardot prospect.</inlineHelpText>
    <label>Parent School</label>
    <length>254</length>
    <type>Text</type>
</CustomField>