force-app/main/default/objects/Lead/fields/Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason__c</fullName>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gestation</fullName>
            </value>
            <value>
                <fullName>Poor Call</fullName>
            </value>
            <value>
                <fullName>Misunderstand</fullName>
            </value>
            <value>
                <fullName>Text/Email Rinse</fullName>
            </value>
            <value>
                <fullName>No Call Connection</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>No Diagnostic Times</fullName>
            </value>
            <value>
                <fullName>Wants to speak to their Child/Partner</fullName>
            </value>
            <value>
                <fullName>Elevate at School</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Reach Out At Later Date</fullName>
            </value>
            <value>
                <fullName>Completed Sequence</fullName>
            </value>
            <value>
                <fullName>Partner Refused</fullName>
            </value>
            <value>
                <fullName>Tutoring/Competitor</fullName>
            </value>
            <value>
                <fullName>No Contact Number</fullName>
            </value>
            <value>
                <fullName>Cancelled Booked Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>