force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Contact_Type_I_Am__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL_OPT_OUT</columns>
    <columns>LEAD.EMAIL_BOUNCED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>Business_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Open Leads</label>
</ListView>