force-app/main/default/objects/Lead/listViews/AUS_Mailshake_Leads.listView-meta.xml
<ListView>
    <fullName>AUS_Mailshake_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>Account__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL_OPT_OUT</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>Next_Activity_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open,Working</value>
    </filters>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>Elevate Australia</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Mailshake</value>
    </filters>
    <label>AUS Mailshake Leads</label>
    <sharedTo>
        <roleAndSubordinates>Elevate_Australia_General_Manager</roleAndSubordinates>
    </sharedTo>
</ListView>