force-app/main/default/objects/Lead/listViews/Australia_Team_Lead.listView-meta.xml
<ListView>
    <fullName>Australia_Team_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>Contact_Type_I_Am__c</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Product_Interest__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>MQL,Open,Working,SQL</value>
    </filters>
    <label>Elevate Australia - Sales</label>
    <queue>Elevate_Australia_Sales</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>