force-app/main/default/objects/Lead/listViews/Coaching_Aus.listView-meta.xml
<ListView>
    <fullName>Coaching_Aus</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Timezone_b2c__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>MQL,Open,Working</value>
    </filters>
    <filters>
        <field>Product_Interest__c</field>
        <operation>equals</operation>
        <value>Coaching</value>
    </filters>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>Elevate Australia Coaching</value>
    </filters>
    <label>Coaching (Aus)</label>
    <sharedTo>
        <roleAndSubordinates>Elevate_Australia_Coaching_GM</roleAndSubordinates>
    </sharedTo>
</ListView>