force-app/main/default/objects/Lead/listViews/Cura_Leads_Cold.listView-meta.xml
<ListView>
    <fullName>Cura_Leads_Cold</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>cura_Start_Time__c</columns>
    <columns>cura_End_Time__c</columns>
    <columns>Campaign__c</columns>
    <columns>Account_Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>Cura</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>SQL,Unqualified,Closed (Unqualified),Unsubscribed</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Outbound - Cold</value>
    </filters>
    <filters>
        <field>LEAD.COMPANY</field>
        <operation>notContain</operation>
        <value>Cura</value>
    </filters>
    <label>Cura Leads (Cold)</label>
</ListView>