force-app/main/default/objects/Lead/listViews/eduSTEM_Support_Lead.listView-meta.xml
<ListView>
    <fullName>eduSTEM_Support_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Cura Support</label>
    <queue>eduSTEM_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>