force-app/main/default/objects/Lead/listViews/Elevate_South_Africa_B2C_Lead.listView-meta.xml
<ListView>
    <fullName>Elevate_South_Africa_B2C_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Elevate South Africa B2C</label>
    <queue>Elevate_South_Africa_B2C</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>