force-app/main/default/objects/Lead/listViews/Leads_from_Pardot.listView-meta.xml
<ListView>
    <fullName>Leads_from_Pardot</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>pi__campaign__c</columns>
    <columns>pi__comments__c</columns>
    <columns>pi__notes__c</columns>
    <columns>pi__created_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pi__created_date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Leads in Pardot</label>
</ListView>