force-app/main/default/objects/Lead/listViews/Leads_Tracker.listView-meta.xml
<ListView>
    <fullName>Leads_Tracker</fullName>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Full_Name__c</columns>
    <columns>LEAD.TITLE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>pi__campaign__c</columns>
    <columns>pi__notes__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Product_Interest__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>Elevate Australia</value>
    </filters>
    <label>AUS Leads Tracker</label>
    <sharedTo>
        <roleAndSubordinates>Elevate_Australia_General_Manager</roleAndSubordinates>
    </sharedTo>
</ListView>